gccida/g2/make_range
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3886:39: error: must use 'union' tag to refer to type 'tree_node'
tree  make_range( tree arg0, int *a2, tree_node **a3, tree_node **a4) 
                                      ^
                                      union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3886:55: error: must use 'union' tag to refer to type 'tree_node'
tree  make_range( tree arg0, int *a2, tree_node **a3, tree_node **a4) 
                                                      ^
                                                      union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3892:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3893:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3901:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3904:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3905:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3908:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3909:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3910:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3911:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3912:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3914:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3915:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3918:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code codeb; // [rsp+30h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3921:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *codea; // [rsp+30h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:3922:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // [rsp+38h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/fold-const.c:4091:36: error: use of undeclared identifier 'machine_mode'
abstract_origin = type_for_mode( ( machine_mode)( *( _BYTE *)( v7 + 61) >> 1), 1)->decl.abstract_origin; 
                                   ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_range/src/obj/fold-const.o] Error 1
